fix(components): 🐛 add flex-wrap and justify-content to .page-actions

--- a/resources/skins.citizen.styles/components/Pagetools.less
+++ b/resources/skins.citizen.styles/components/Pagetools.less
@@ -1,7 +1,9 @@
 .page-actions {
 	display: flex;
+	flex-wrap: wrap;
 	gap: var( --space-xxs );
 	align-items: center;
+	justify-content: flex-end;
 
 	// TODO: Merge this with header__item
 	&__item {
